--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: 3DAILab
 SEOTitle: 3DAILab
 # header-img: "/img/Zhuhai.jpg"    # img/post-bg-desk.jpg
-# header-img: "/img/hp_img1.jpg"
-header-img: "/img/hp_img2.jpg"
+# header-img: "/img/hp_img1.png"
+header-img: "/img/hp_img2.png"
 email: 
 description: "3D Spatio-Temporal AI Laboratory"
 keyword: ""
